Closed Bug 217640 Opened 23 years ago Closed 22 years ago

autocomplete removes exactly matching entries from list

Categories

(Firefox :: Address Bar, defect, P3)

x86
Linux
defect

Tracking

()

VERIFIED FIXED
Firefox1.0

People

(Reporter: jmd, Assigned: janv)

Details

(Keywords: fixed-aviary1.0)

Attachments

(1 file)

I have two user names saved for a site, say, "foo" and "foobar". When I type "f" into the usern ame field, both are shown. When I type another "o", no change. When I type the second "o" so that it now reads "foo", my "foo" user name disappears from the drop-down list, and only "foobar" remains. Expected behavior would be to still show both matching entries. A user may type the first part of an exactly-matching entry quickly, THEN look at the list and be shocked to not see it. Also, the password field doesn't fill-in to match this now "chosen" entry until the blur event, so it looks as if there is no "action" to be taken still (since you can't arrow down and hit enter), so users may be confused about the password not being present if the entry is already "selected". The URL bar behaves as expected. Typing http://www.nytimes.com/ there shows "http://www.nytimes.com/" as well as "http://www.nytimes.com/etc/etc/etc". Passwords and form fields do not.
Maybe I misunderstood you, but in your example, why show foo in the autocomplete, when you already typed it in?
Because it still matches, because the password hasn't been set yet, and because it's jarring to see something that matches disapear from the list of matches.
This may be intended behaviour. It seems like it to me since it removes a 'superfluous' entry. If it isn't it's minor. -->Minor
I thought this was a little weird the first time I saw it in Firebird, but IE does the same thing.
"IE does it" doesn't apply here so much. Since a) both Jesse and I thought this behavior was weird/unexpected b) leaving the match gives users more options that match their input: 1) having one extra valid or arguably-valid selection is never bad 2) removing one valid selection can be quite bad I think Mozilla/wallet/satchel/whatever should modify its behavior here, to match URL bar behavior, and provide the expected selection list.
I agree with jmd - fixing this would be an improvement.
Flags: blocking1.0?
worth investigating, if only briefly.
Flags: blocking1.0? → blocking1.0+
Priority: -- → P4
Target Milestone: --- → Firefox1.0
Assignee: hewitt → bugs
Priority: P4 → P3
Assignee: bugs → varga
Yeah, I think it was done this way intentionally, to match IE probably. See http://lxr.mozilla.org/mozilla/source/toolkit/components/satchel/src/nsFormHistory.cpp#803 The fix for this bug would be really easy, just remove that check for strings of the same length. Ben, do we want to change the current behaviour?
Status: NEW → ASSIGNED
Attached patch fixSplinter Review
Comment on attachment 152584 [details] [diff] [review] fix Ben says r=ben
Attachment #152584 - Flags: review+
Comment on attachment 152584 [details] [diff] [review] fix Can you sr, blake?
Attachment #152584 - Flags: superreview?(firefox)
Comment on attachment 152584 [details] [diff] [review] fix landed on the trunk long time ago with r/sr=ben
Attachment #152584 - Flags: superreview?(firefox)
Attachment #152584 - Flags: superreview+
Attachment #152584 - Flags: approval-aviary?
fixed on the trunk and aviary branch
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Keywords: fixed-aviary1.0
Resolution: --- → FIXED
Verified fixed. Very nice improvement. Thanks Jan! (et al)
Status: RESOLVED → VERIFIED
Hmm, I thought this was a bug in Firefox not matching IE's behavior (which I prefer). When I paste some word in http://lxr.mozilla.org/seamonkey/ in the text search/file search input, and I used this word already some time ago, I get the autocomplete popup. That is extremely annoying in this case, because it blocks me from clicking the find button.
Martijn: Clicking anywhere, inside or outside of the block, removes the drop-down. Hardly a major issue, and forms with the submit button right below the input area are rare, for this very reason. If there was more than one match, even in IE, the submit button would be blocked. Perhaps though, a paste operation into an input that only matches a single saved entry should not cause the drop-down to be created? The purpose of this bug was not to remove the current value from the drop-down if it was already shown, but actually creating the drop-down if it wasn't already shown could perhaps be a different case. Anyway, a seperate issue, and fairly trivial.
I filed the behavior mentioned in comment 16 as bug 262206.
*** Bug 301412 has been marked as a duplicate of this bug. ***
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: