Fix for bug 217640. autocomplete removes exactly matching entries from list r=ben